--- a/.github/workflows/artifact.yml
+++ b/.github/workflows/artifact.yml
@@ -25,9 +25,10 @@ jobs:
       - name: download
         uses: actions/download-artifact@v4
           with:
+            name: hello-artifact
             path: ./artifact
 
       - name: display content
-        run: cat hello.txt
+        run: cat ./artifact/hello.txt
            
   
