--- a/.github/workflows/artifact.yml
+++ b/.github/workflows/artifact.yml
@@ -26,9 +26,9 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: hello-artifact
-          path: ./artifact
+          path: ./artifacts
 
       - name: display content
-        run: cat ./artifact/hello.txt
+        run: cat ./artifacts/hello.txt
            
   
